Fixed alignment of "You are now subscribed..." notice when subscribing / unsubscribing to a topic
(DBOINCP-41)

--- a/drupal/sites/default/boinc/themes/boinc/css/pages.css
+++ b/drupal/sites/default/boinc/themes/boinc/css/pages.css
@@ -314,6 +314,12 @@ ul.links li a {
   line-height: 2.35em;
   text-transform: uppercase;
 }
+.subscribe .flag-message,
+.view-subscriptions .flag-message {
+  left: initial;
+  right: 0;
+  text-align: right;
+}
 
 .toc {
   background-color: transparent;
